fix(ui): adjust overflow in init game view

--- a/packages/ui/src/assets/style/main.scss
+++ b/packages/ui/src/assets/style/main.scss
@@ -101,7 +101,7 @@ body {
 .container {
   text-align: center;
   display: grid;
-  row-gap: 24px;
+  row-gap: 16px;
 }
 
 .btn {
